--- a/CSS/style.css
+++ b/CSS/style.css
@@ -384,8 +384,9 @@ html, body {
 
 .webshop-info .container{
     max-width:1600px;
-    display:flex;
+    display:grid;
     justify-content:space-evenly;
+    
 
 }
 
@@ -394,7 +395,7 @@ html, body {
     padding:1rem;
     display:flex;
     align-items:center;
-    margin:0 1rem;
+    margin:1rem;
     flex:1;
     border-radius:var(--border-radius-small);
 
@@ -417,7 +418,7 @@ html, body {
 
     .webshop-info .info-box h1{
         color:var(--color-theme);
-        font-size:var(--font-size-16);
+        font-size:1rem;
         font-weight:var(--font-weight-medium);
 
     }
@@ -434,8 +435,8 @@ html, body {
     .shop-by-category .grid{
     display:grid;
     gap:0.8rem;
-    grid-template-columns: repeat(5, minmax(100px, 249px));
-    grid-template-rows: repeat(3, minmax(100px, 249px));
+    grid-template-columns: repeat(5, minmax(65px, 249px));
+    grid-template-rows: repeat(3, minmax(65px, 249px));
 }
     
     .shop-by-category .category-box{
@@ -445,14 +446,12 @@ html, body {
         height:100%;
         width:100%;
         overflow:hidden;
-
-
     }
 
     .shop-by-category .category-box .category-box-title{
         position:absolute;
         bottom:0;
-        width:50%;
+        width:100%;
         border-radius:0 var(--border-radius-small) 0 0;
         background-color:var(--color-theme-dark);
         color:var(--color-theme);
@@ -483,45 +482,45 @@ html, body {
 
     /* CSS GRID POSITIONERING FÖR "SHOP BY CATEGORY */
 
-#category-box-1{
-    grid-column:1/2;
-    grid-row:1/2;
-}
-
-#category-box-2{
-    grid-column:2/4;
-    grid-row:1/2;
-}
-
-
-#category-box-3{
-    grid-column:4/-1;
-    grid-row:1/3;
-}
-
-
-#category-box-4{
-    grid-column:1/3;
-    grid-row:2/-1;
-}
-
-
-#category-box-5{
-    grid-column:3/4;
-    grid-row:2/3;
-}
-
-
-#category-box-6{
-    grid-column:3/5;
-    grid-row:3/-1 ;
-}
-
-
-#category-box-7{
-    grid-column:5/-1;
-    grid-row:3/-1;
-}
+    #category-box-1{
+        grid-column:1/2;
+        grid-row:1/2;
+    }
+    
+    #category-box-2{
+        grid-column:2/4;
+        grid-row:1/2;
+    }
+    
+    
+    #category-box-3{
+        grid-column:4/-1;
+        grid-row:1/3;
+    }
+    
+    
+    #category-box-4{
+        grid-column:1/3;
+        grid-row:2/-1;
+    }
+    
+    
+    #category-box-5{
+        grid-column:3/4;
+        grid-row:2/3;
+    }
+    
+    
+    #category-box-6{
+        grid-column:3/5;
+        grid-row:3/-1 ;
+    }
+    
+    
+    #category-box-7{
+        grid-column:5/-1;
+        grid-row:3/-1;
+    }
 
 
 
@@ -533,6 +532,12 @@ html, body {
 
 /* RESPONSIVITET */
 
+@media (max-width:992px){
+    
+}
+
+
+
 /* Mobil */
 @media (min-width:578px){
     .top-menu .toplinks{
@@ -541,9 +546,9 @@ html, body {
     }
     .top-menu > .container{
         justify-content: space-between;
-}
-
-
+    }
+    
+   
 }
 
 
@@ -557,6 +562,8 @@ html, body {
         display:block;
 
     }
+    
+    
    
 
 }
@@ -588,9 +595,15 @@ html, body {
         display:block;
         width:50%;
     }
-    
 
+    .webshop-info .container{
+        display:flex;
+        
 }
+
+    
+}
+
 
 
 /* Standard hemsida */
@@ -609,6 +622,7 @@ html, body {
         width:100%;
 
     }
+    
 
     
 }
