--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,6 +163,9 @@ html, body {
 
 
 /* Newsletter, Contact, FAQ + Social media-knappar */
+
+
+
 .top-menu .toplinks a{
     color:var(--color-white);
     text-decoration:none;
@@ -215,9 +218,9 @@ html, body {
         }
     
         /* Länkar, My account m.m */
-    .main-menu .mlinks{
+        .main-menu .mlinks{
             flex:3;
-            display:flex;
+            display:none;
             justify-content:end;
             align-items:center;
         }
@@ -250,6 +253,7 @@ html, body {
 
         .main-menu .mlinks #cart{
             position:relative;
+            display:flex;
         }
         
         .main-menu .mlinks #cart .badge{
@@ -432,11 +436,11 @@ html, body {
 
 
 
-    .shop-by-category .grid{
+.shop-by-category .grid{
     display:grid;
     gap:0.8rem;
     grid-template-columns: repeat(5, minmax(65px, 249px));
-    grid-template-rows: repeat(3, minmax(65px, 249px));
+    grid-template-rows: repeat(5, minmax(65px, 249px));
 }
     
     .shop-by-category .category-box{
@@ -446,6 +450,7 @@ html, body {
         height:100%;
         width:100%;
         overflow:hidden;
+        
     }
 
     .shop-by-category .category-box .category-box-title{
@@ -463,7 +468,7 @@ html, body {
     .shop-by-category .category-box:hover .category-box-title{
         height:100%;
         width:100%;
-        opacity:50%;
+        opacity:80%;
     }
 
     .shop-by-category .category-box .category-box-title span{
@@ -475,70 +480,59 @@ html, body {
 
     /* ABSOLUT INTE KLARA O BRA BILDER */
     .shop-by-category .category-box img{
+       
         height:100%;
         width:100%;
-    
+        object-fit: cover;
+        
+        
     }
 
-    /* CSS GRID POSITIONERING FÖR "SHOP BY CATEGORY */
+    /* SHOP BY CATEGORY GRID */
 
     #category-box-1{
-        grid-column:1/2;
-        grid-row:1/2;
+
+        grid-column:1/-1;
+        grid-row:1/1;
     }
-    
     #category-box-2{
-        grid-column:2/4;
-        grid-row:1/2;
+        
+        grid-column: 1/-1;
+        grid-row: 2/2;
     }
-    
     
     #category-box-3{
-        grid-column:4/-1;
-        grid-row:1/3;
+        grid-column:3/-1;
+        grid-row:3/3;
     }
-    
-    
+
     #category-box-4{
         grid-column:1/3;
-        grid-row:2/-1;
+        grid-row:3/3;
     }
-    
-    
+
     #category-box-5{
-        grid-column:3/4;
-        grid-row:2/3;
+        grid-column:1/3;
+        grid-row:4/4;
     }
-    
-    
     #category-box-6{
-        grid-column:3/5;
-        grid-row:3/-1 ;
+        grid-column:3/-1;
+        grid-row:4/4;
     }
-    
-    
     #category-box-7{
-        grid-column:5/-1;
-        grid-row:3/-1;
+        grid-column:1/-1;
+        grid-row:5/5;
     }
-
-
-
-
-
 
 
 
 
 /* RESPONSIVITET */
 
-@media (max-width:992px){
-    
-}
-
-
 
 /* Mobil */
+
+
 @media (min-width:578px){
     .top-menu .toplinks{
         display:block;
@@ -548,7 +542,21 @@ html, body {
         justify-content: space-between;
     }
     
-   
+    
+    .main-menu .mlinks{
+        flex:3;
+        display:flex;
+        justify-content:end;
+        align-items:center;
+    }
+
+    .main-menu a{
+        font-size:1em;
+        text-decoration: none;
+        color:var(--color-theme-dark);
+        margin:0 0.8rem;
+        
+    }
 }
 
 
@@ -562,10 +570,50 @@ html, body {
         display:block;
 
     }
-    
-    
-   
 
+    
+    
+    /* SHOP BY CATEGORY GRID */
+    .shop-by-category .grid{
+    grid-template-columns: repeat(5, minmax(65px, 249px));
+    grid-template-rows: repeat(3, minmax(65px, 249px));
+    }
+
+    #category-box-1{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+    #category-box-2{
+    grid-column: 2/4;
+    grid-row: 1/2;
+}
+
+    #category-box-3{
+    grid-column: 4/-1;
+    grid-row: 1/3;
+
+}
+
+    #category-box-4{
+    grid-column: 1/3;
+    grid-row: 2/-1;
+}
+
+    #category-box-5{
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+    #category-box-6{
+    grid-column: 3/5;
+    grid-row: 3/-1;
+}
+
+    #category-box-7{
+    grid-column: 5/-1;
+    grid-row: 3/-1;
+}
 }
 
 
