--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,11 +48,13 @@ html, body {
     font-weight:var(--font-weight-medium);
     padding-left:1.4rem;
     padding-right:1.4rem;
+    transition:0.2s ease-in-out;
 }
 
 .btn-theme:hover{
     background-color:var(--color-theme-dark);
     color:var(--color-white);
+    font-size:var(--font-size-16);
 }
 
 .btn-mitten{
@@ -62,12 +64,14 @@ html, body {
     font-weight:var(--font-weight-medium);
     padding-left:1.4rem;
     padding-right:1.4rem;
+    transition:0.2s ease-in-out;
 }
 
 .btn-mitten:hover{
     
     background-color:var(--color-theme-dark);
     color:var(--color-white);
+    
 }
 
 .instock{
@@ -220,9 +224,45 @@ html, body {
 
         }
          /* Searchbar */
-        .main-menu .search{
+        .main-menu .sök{
             flex:4;
         }
+
+            .main-menu .sök #sökruta{
+                border-radius: var(--border-radius-medium);
+                margin:auto;
+                position:relative;
+                height:35px;
+                
+            }
+
+                .main-menu .sök #sökruta input{
+                    position:absolute;
+                    border-radius:var(--border-radius-medium);
+                    height:100%;
+                    width:100%;
+                    outline:none;
+                    border:1px solid var(--color-gray-2);
+                    font-size:0.875rem;
+                    padding-left:1rem;
+                }
+
+                    .main-menu .sök #sökruta button{
+                        position:absolute;
+                        top:0;
+                        right:-2px;
+                        width:40px;
+                        height:100%;
+                        background: var(--color-theme);
+                        color:var(--color-white);
+                        border:none;
+                        border-radius:0 var(--border-radius-medium) var(--border-radius-medium)0;
+                        transition:0.2s ease-in-out;
+                    }
+                        .main-menu .sök #sökruta button:hover{
+                            background-color:var(--color-theme-dark);
+                        }
+
     
         /* Länkar, My account m.m */
         .main-menu .mlinks{
@@ -550,6 +590,7 @@ html, body {
 .new-arriv{
     display:flex;
     justify-content: space-between;
+    margin-bottom:4rem;
 }
 
 
@@ -673,8 +714,6 @@ html, body {
     margin-top:4rem;
     margin-bottom:4rem;
     background-color:var(--color-gray-1);
-    
-    
 }
 
 .thirty-percent .container{
@@ -693,16 +732,17 @@ html, body {
     color:var(--color-white);
     background-color:var(--color-theme);
     transition:0.2s ease-in-out;
-    
 }
 
 .thirty-percent .container .thirty-off:hover{
     transform:scale(1.1);
     border-radius:var(--border-radius-rounded);
+    
 }
 
 .thirty-percent .container .thirty-off strong{
     font-size:var(--font-size-60);
+    
 }
 
 .thirty-percent .container .thirty-off h1{
@@ -727,6 +767,7 @@ html, body {
     background-color:var(--color-white);
     color:var(--color-theme-dark);
     font-size:var(--font-size-18);
+
     
     /* PILLA MER MED DEN HÄR KNAPPEN */
 }
@@ -737,7 +778,6 @@ html, body {
     margin-left:40%;
     padding-top:10%;
     color:var(--color-white);
-    
 }
 
 .thirty-percent .container .learn-more p{
@@ -764,11 +804,144 @@ html, body {
 
 
 
+/* FLASH SALE */
 
 
-
-
+.flashdown{
+    background-color:var(--color-theme-dark);
+    margin-bottom:4rem;
     
+    
+}
+
+
+.flashdown .container{
+    display:flex;
+    justify-content: space-between;
+    height:418px;
+    text-align:center;
+}
+
+/* Vänster sida */
+
+.flashdown .container .flash-sale{
+    padding-top:40px;
+    height:270px;
+    width:320px;
+    color:var(--color-white);
+    background-color:var(--color-theme);
+    margin-bottom:15%;
+}
+
+.flashdown .flash-sale h1{
+    font-size:4rem;
+    
+}
+.flashdown .flash-sale p{
+    font-size:var(--font-size-18);
+    
+}
+
+/* Höger sida */
+
+.flashdown .container .countdown{
+    width:65%;
+    padding-top:159px;
+}
+
+.flashdown .countdown .circle{
+    display:flex;
+    justify-content: space-evenly;
+    color:var(--color-white);
+}
+
+.flashdown .container .countdown a{
+    margin-top:2%;
+    background-color:var(--color-white);
+    color:var(--color-theme);
+    border-radius:var(--border-radius-medium);
+    font-weight:var(--font-weight-medium);
+    padding-left:1.4rem;
+    padding-right:1.4rem;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
